Put back to copy font icon(woff) rename folder for i18n (but still shows error)

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -1,21 +1,23 @@
 {
-    "add": "Add",
-    "create": "Create",
-    "icon": "Icon",
-    "name": "Name",
-    "openExternal": "Open externally",
-    "emptyName": "This field cannot be empty.",
-    "emptyField": "This field cannot be empty.",
-    "edit": "Edit",
-    "delete": "Delete",
-    "followSystem": "Follow system",
-    "more": "More",
-    "close": "Close",
-    "search": "Search",
-    "dangerButton": "Confirm {action}?",
-    "confirm": "Confirm",
-    "cancel": "Cancel",
-    "default": "Default",
+	"root" : {
+		"add": "Add",
+		"create": "Create",
+		"icon": "Icon",
+		"name": "Name",
+		"openExternal": "Open externally",
+		"emptyName": "This field cannot be empty.",
+		"emptyField": "This field cannot be empty.",
+		"edit": "Edit",
+		"delete": "Delete",
+		"followSystem": "Follow system",
+		"more": "More",
+		"close": "Close",
+		"search": "Search",
+		"dangerButton": "Confirm {action}?",
+		"confirm": "Confirm",
+		"cancel": "Cancel",
+		"default": "Default",
+	}
     "time": {
         "now": "now",
         "m": "m",
